--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                     <div class="col-6 offset-1">
                         <p>You will be given a random number at the start of the game.</p>
                         <br>
-                        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your
-                            total score.</p>
-                        <br>                      
-                        <p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
+                        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
+                            to your total score.</p>
+                        <br>
+                        <p>You win the game by matching your total score to random number, you lose the game if your total score
+                            goes above the random number.</p>
                         <br>
                         <p>The value of each crystal is hidden from you until you click on it.</p>
                         <br>
@@ -42,26 +43,31 @@
                 <div class="col-3 offset-5">
                     <p class="blue">wins</p>
                 </div>
-                <div class="col-6 offset-6">
+
+                <div class="col-5 offset-7">
                     <p class="trans"></p>
                 </div>
             </div>
 
             <div class="row">
-                <input type="image" id="redcrystal" style="height:100px;width:100px;" src="assets/images/redcrystal.jpg"/>
-                <input type="image" id="bluecrystal" style="height:100px;width:100px;" src="assets/images/bluecrystal.jpg"/>
-                <input type="image" id="greencrystal" style="height:100px;width:100px;" src="assets/images/greencrystal.jpg"/>
-                <input type="image" id="yellowcrystal" style="height:100px;width:100px;" src="assets/images/yellowcrystal.jpg"/
+                <input type="image" id="redcrystal" style="height:100px;width:100px;" src="assets/images/redcrystal.jpg" />
+                <input type="image" id="bluecrystal" style="height:100px;width:100px;" src="assets/images/bluecrystal.jpg" />
+                <input type="image" id="greencrystal" style="height:100px;width:100px;" src="assets/images/greencrystal.jpg" />
+                <input type="image" id="yellowcrystal" style="height:100px;width:100px;" src="assets/images/yellowcrystal.jpg" />
             </div>
 
+            <div class="row">
 
+            </div>
 
+            <div class="row">
 
+            </div>
 
-
+            </div>
         </div>
-    </div>
-    <script src="assets/javascript/game.js"></script>
+
+<script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
